--- a/styles/style.css
+++ b/styles/style.css
@@ -22,15 +22,15 @@ body {
     background-color: var(--color2);
 }
 
-main {
+/* main {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: calc(var(--footer-height));
-}
+} */
 
-section {
+/* section {
     background-color: var(--color5);
     width: 1000px;
     max-width: 80%;
@@ -43,11 +43,11 @@ section {
     margin-top: var(--gutter);
     margin-bottom: var(--gutter);
     border: solid 2px var(--color1);
-}
+} */
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
@@ -111,3 +111,39 @@ footer {
     }
 
   }
+
+  main {
+      display:grid;
+      grid-template-columns: 1fr 1fr;
+      margin-top: 100px;
+  }
+
+  .ducks, .pigeons {
+      display:flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+  }
+
+#score-1, #score-2 {
+    border: 1px solid black;
+    padding: 40px;
+    font-size: 5em;
+}
+
+button {
+    padding:0.7em 1.4em;
+    background-color: black;
+    color:white;
+    text-transform: uppercase;
+    font-size: 1em;
+    border: 1px solid white;
+}
+
+button:hover {
+    cursor:pointer;
+}
+
+
+
